src/Korobi/WebBundle/Resources/assets/sass/application/irc/_logs.scss
@import url(//fonts.googleapis.com/css?family=Source+Code+Pro:400,700);

.logs {
  background-color: rgba(0, 0, 0, 0.5);
  padding: 0.8em 0;
  border-radius: 3px;
  display: table;
  width: 100%;

  .empty {
    padding: 0 1em;
  }

  .line {
    display: table-row;
    font-weight: 400;
    font-family: 'Source Code Pro', monospace;
    @include transition(0.5s ease-out background-color);

    .owner:before    { content: '~'; color: nth($irc-colors,  5); }
    .admin:before    { content: '&'; color: nth($irc-colors, 12); }
    .operator:before { content: '@'; color: nth($irc-colors, 10); }
    .half_op:before  { content: '%'; color: nth($irc-colors, 14); }
    .voice:before    { content: '+'; color: nth($irc-colors,  9); }

    &.highlighted {
      font-weight: bold;
      background-color: transparentize(#2C3E50, 0.5);
      @include transition(0.5s cubic-bezier(0.18, 0.89, 0.32, 1.28) background-color);
    }

    & > span {
      display: table-cell;
      border-bottom: 1px solid #1b1b1b;
    }

    &:last-child > span {
      border-bottom: none;
    }

    .timestamp {
      padding-left: 1em;
    }

    .nick {
      text-align: right;
      padding-left: 15px;
      padding-right: 15px;
      border-right: 1px solid #444;
      white-space: nowrap;
    }

    .message {
      word-break: break-all;
      // Invalid but recognized by some browsers
      word-break: break-word;
      @include hyphens(auto);
      padding-right: 1em;
      padding-left: 10px;
      white-space: pre-wrap;
      width: 100%;

      .underline { text-decoration: underline; }
      .italic    { font-style: italic; }
      .bold      { font-weight: bold; }
    }


    &[data-event-type=quit],
    &[data-event-type=join],
    &[data-event-type=nick],
    &[data-event-type=mode] {
      .message { color: #666; }
      .owner:before    { content: '~'; color: desaturate(nth($irc-colors,  5), 60%); }
      .admin:before    { content: '&'; color: desaturate(nth($irc-colors, 12), 60%); }
      .operator:before { content: '@'; color: desaturate(nth($irc-colors, 10), 60%); }
      .half_op:before  { content: '%'; color: desaturate(nth($irc-colors, 14), 60%); }
      .voice:before    { content: '+'; color: desaturate(nth($irc-colors,  9), 60%); }
    }
  }

  .js-hl .fa {
    cursor: pointer;
  }
}

/* Only enable when linkable */
.logs.linkable .timestamp {
  cursor: pointer;

  &:hover {
    text-decoration: underline;
  }
}

